# roscopter

./: .gitignore  CHANGELOG.md  README.md
.github/: release-please-config.json
.github/workflows/: ros2-ci.yml
roscopter/: CMakeLists.txt  package.xml
roscopter/config/: multirotor_frame_config.yaml
roscopter/include/controller/: controller.h  controller.hpp  controller_cascading_pid.hpp  controller_ros.h  controller_ros.hpp  controller_state_machine.hpp  controller_successive_loop.hpp  simple_pid.h  simple_pid.hpp
roscopter/include/ekf/: ekf_ros.h  ekf_rosbag.h  estimator_continuous_discrete.hpp  estimator_ekf.hpp  estimator_ros.hpp  geomag.h
roscopter/include/geometry/: quat.h
roscopter/include/navigation/: path_manager.hpp  path_manager_ros.hpp  path_planner.hpp  trajectory_follower.hpp  trajectory_follower_ros.hpp
roscopter/include/param_manager/: param_manager.hpp
roscopter/include/roscopter/: eigen_helpers.h
roscopter/launch/: roscopter.launch.py
roscopter/params/: estimator.yaml  mixing_matrix_firmware_params.yaml  multirotor.yaml  multirotor_mission.yaml  quadcopter_params.yaml
roscopter/scripts/: compute_multirotor_mixing_matrix.py
roscopter/src/controller/: controller.cpp  controller_cascading_pid.cpp  controller_node.cpp  controller_ros.cpp  controller_state_machine.cpp  controller_successive_loop.cpp  simple_pid.cpp
roscopter/src/ekf/: ekf_node.cpp  ekf_ros.cpp  estimator_continuous_discrete.cpp  estimator_ekf.cpp  estimator_node.cpp  estimator_ros.cpp  external_attitude_transcriber.cpp
roscopter/src/navigation/: path_manager.cpp  path_manager_ros.cpp  path_planner.cpp  trajectory_follower.cpp  trajectory_follower_ros.cpp
roscopter/src/param_manager/: param_manager.cpp
roscopter/src/utils/: geomag.c
roscopter/test/: estimator_test.cpp
roscopter_gcs/: CMakeLists.txt  package.xml
roscopter_gcs/include/: rviz_aircraft_publisher.hpp  rviz_waypoint_publisher.hpp
roscopter_gcs/launch/: roscopter_gcs.launch.py  rosplane_gcs.launch.py
roscopter_gcs/src/: rviz_aircraft_publisher.cpp  rviz_waypoint_publisher.cpp
roscopter_msgs/: CMakeLists.txt  package.xml
roscopter_msgs/msg/: Command.msg  ControllerCommand.msg  ControllerInternals.msg  PoseEuler.msg  State.msg  TrajectoryCommand.msg  Waypoint.msg
roscopter_msgs/srv/: AddWaypoint.srv  AddWaypointList.srv  ClearWaypoints.srv  Fly.srv  Hold.srv  Land.srv  ListWaypoints.srv  Release.srv  RemoveWaypoint.srv  ReturnToBase.srv  SetWaypointsFromFile.srv
roscopter_pkgs/: CMakeLists.txt  package.xml
roscopter_sim/: CMakeLists.txt  package.xml
roscopter_sim/include/roscopter_sim/: multirotor_forces_and_moments.h
roscopter_sim/launch/: sim.launch.py
roscopter_sim/src/: state_transcription_node.cpp
roscopter_tuning/: CMakeLists.txt  README.md  package.xml
roscopter_tuning/include/: signal_generator.hpp
roscopter_tuning/launch/: roscopter_tuning.launch.py  tuning_gui.launch.py
roscopter_tuning/resources/: param_tuning_config.yaml
roscopter_tuning/src/: signal_generator.cpp
