<?xml version="1.0"?>
<package format="3">
  <name>roscopter</name>
  <version>0.0.0</version>
  <description>The roscopter package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <license>TODO</license>

  <!-- <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend> -->
  <!-- <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>roscopter_msgs</depend>
  <depend>roscopter_utils</depend>
  <depend>rosflight_msgs</depend>
  <depend>rosflight_utils</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>roslib</depend> -->

  <build_depend>message_generation</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <!-- <build_type condition="$ROS_VERSION == 1">catkin</build_type> -->
    <!-- <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
