<?xml version="1.0"?>
<package format="3">
  <name>roscopter_msgs</name>
  <version>2.0.0</version>
  <description>Message, service, and action definitions for the ROScopter package</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>

  <license>TODO</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/byu-magicc/roscopter</url>
  <url type="bugtracker">https://github.com/byu-magicc/roscopter/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>


  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
