<?xml version="1.0"?>
<package format="3">
  <name>roscopter_sim</name>
  <version>2.0.1</version>
  <description>The roscopter_sim package</description>

  <maintainer email="superjax08@gmail.com">James Jackson</maintainer>

  <author>James Jackson</author>
  <author>Gary Ellingson</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <!-- Dependencies needed to compile and for after this package is compiled -->
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rosflight_msgs</depend>
  <depend>roscopter_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- =========================================== -->

  <export>

    <build_type>ament_cmake</build_type>

  </export>
</package>
