<?xml version="1.0"?>
<package format="3">
  <name>roscopter_tuning</name>
  <version>0.0.0</version>
  <description>Collection of tools for tuning ROScopter</description>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>roscopter_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
